force-app/main/default/objects/vaultp1__c/vaultp1__c.object-meta.xml
<CustomObject>
    <label>vaultp1</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>vaultp1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>