force-app/main/default/objects/vaultp1__c/fields/checkbox10__c.field-meta.xml
<CustomField>
    <fullName>checkbox10__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checkbox10</label>
    <type>Checkbox</type>
</CustomField>