force-app/main/default/objects/vaultp1__c/fields/checkbox1__c.field-meta.xml
<CustomField>
    <fullName>checkbox1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checkbox1</label>
    <type>Checkbox</type>
</CustomField>