force-app/main/default/objects/vaultp1__c/fields/checkbox9__c.field-meta.xml
<CustomField>
    <fullName>checkbox9__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checkbox9</label>
    <type>Checkbox</type>
</CustomField>