force-app/main/default/objects/vaultp1__c/fields/email9__c.field-meta.xml
<CustomField>
    <fullName>email9__c</fullName>
    <label>Email9</label>
    <type>Email</type>
</CustomField>