force-app/main/default/objects/vaultp1__c/fields/encryptedText1__c.field-meta.xml
<CustomField>
    <fullName>encryptedText1__c</fullName>
    <label>EncryptedText 1</label>
    <length>160</length>
    <maskChar>X</maskChar>
    <maskType>creditCard</maskType>
    <type>EncryptedText</type>
</CustomField>