force-app/main/default/objects/vaultp1__c/fields/number10__c.field-meta.xml
<CustomField>
    <fullName>number10__c</fullName>
    <label>Number10</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>