force-app/main/default/objects/vaultp1__c/fields/number16__c.field-meta.xml
<CustomField>
    <fullName>number16__c</fullName>
    <label>Number16</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>