force-app/main/default/objects/vaultp1__c/fields/number1__c.field-meta.xml
<CustomField>
    <fullName>number1__c</fullName>
    <label>Number1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>