force-app/main/default/objects/vaultp1__c/fields/percent1__c.field-meta.xml
<CustomField>
    <fullName>percent1__c</fullName>
    <label>Percent1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>