force-app/main/default/objects/vaultp1__c/fields/phone9__c.field-meta.xml
<CustomField>
    <fullName>phone9__c</fullName>
    <label>Phone9</label>
    <type>Phone</type>
</CustomField>