force-app/main/default/objects/vaultp1__c/fields/richTextArea1__c.field-meta.xml
<CustomField>
    <fullName>richTextArea1__c</fullName>
    <label>Rich Text Area1</label>
    <type>TextArea</type>
</CustomField>