force-app/main/default/objects/vaultp1__c/fields/richTextArea2__c.field-meta.xml
<CustomField>
    <fullName>richTextArea2__c</fullName>
    <label>Rich Text Area2</label>
    <type>TextArea</type>
</CustomField>