force-app/main/default/objects/vaultp1__c/fields/text11__c.field-meta.xml
<CustomField>
    <fullName>text11__c</fullName>
    <label>Text11</label>
    <length>255</length>
    <type>Text</type>
</CustomField>