force-app/main/default/objects/vaultp1__c/fields/text12__c.field-meta.xml
<CustomField>
    <fullName>text12__c</fullName>
    <label>Text12</label>
    <length>255</length>
    <type>Text</type>
</CustomField>