force-app/main/default/objects/vaultp1__c/fields/text15__c.field-meta.xml
<CustomField>
    <fullName>text15__c</fullName>
    <label>Text15</label>
    <length>255</length>
    <type>Text</type>
</CustomField>