force-app/main/default/objects/vaultp1__c/fields/textArea1__c.field-meta.xml
<CustomField>
    <fullName>textArea1__c</fullName>
    <label>Text Area1</label>
    <type>TextArea</type>
</CustomField>