force-app/main/default/objects/vaultp1__c/fields/textArea2__c.field-meta.xml
<CustomField>
    <fullName>textArea2__c</fullName>
    <label>Text Area2</label>
    <type>TextArea</type>
</CustomField>