force-app/main/default/objects/vaultp1__c/fields/url10__c.field-meta.xml
<CustomField>
    <fullName>url10__c</fullName>
    <label>URL10</label>
    <type>Url</type>
</CustomField>