force-app/main/default/objects/vaultp1__c/fields/url1__c.field-meta.xml
<CustomField>
    <fullName>url1__c</fullName>
    <label>URL1</label>
    <type>Url</type>
</CustomField>