force-app/main/default/objects/vaultp1__c/fields/url2__c.field-meta.xml
<CustomField>
    <fullName>url2__c</fullName>
    <label>URL2</label>
    <type>Url</type>
</CustomField>